--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "author": "Nicholas Dwiarto <nicholasdwiarto@yahoo.com> (https://nicholasdw.com)",
   "dependencies": {
     "@line/bot-sdk": "^7.3.0",
-    "express": "^4.17.1"
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.2",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
