--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "echo-bot-ts",
-  "version": "0.0.0",
-  "description": "An example LINE bot with TypeScript made to echo messages",
+  "name": "line-weather-run",
+  "version": "1.0.0",
+  "description": "Testing to see if I can get Weather API data integrated into LINE API",
   "main": "./dist/index.js",
   "scripts": {
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
     "start": "node dist/index.js"
   },
-  "author": "Nicholas Dwiarto <nicholasdwiarto@yahoo.com> (https://nicholasdw.com)",
+  "author": "Nicholas Dwiarto <nicholasdwiarto@yahoo.com> (https://nicholasdw.com)-for the echo tutorial portion
+            The Weather API tutorial was found from Roy Kibet https://www.section.io/engineering-education/create-a-weather-app-in-nodejs-using-openweathermap-api/#prerequisites",
   "dependencies": {
     "@line/bot-sdk": "^7.3.0",
     "body-parser": "^1.20.0",
