--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "npm run clean && tsc",
     "start": "node dist/index.js"
   },
-  "author": "Nicholas Dwiarto <nicholasdwiarto@yahoo.com> (https://nicholasdw.com)-for the echo tutorial portion
-            The Weather API tutorial was found from Roy Kibet https://www.section.io/engineering-education/create-a-weather-app-in-nodejs-using-openweathermap-api/#prerequisites",
+  "author": "Nicholas Dwiarto <nicholasdwiarto@yahoo.com> (https://nicholasdw.com)-for the echo tutorial portion. The Weather API tutorial was found from Roy Kibet https://www.section.io/engineering-education/create-a-weather-app-in-nodejs-using-openweathermap-api/#prerequisites",
   "dependencies": {
     "@line/bot-sdk": "^7.3.0",
     "body-parser": "^1.20.0",
