--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "node-fetch": "^3.2.10",
+    "node-fetch": "^2.6.6",
     "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.14",
+    "@types/node-fetch": "^2.6.2",
     "rimraf": "^3.0.2",
-    "typescript": "^4.1.3",
-    "type":"module"
+    "typescript": "^4.1.3"
   }
 }
