--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@line/bot-sdk": "^7.3.0",
     "body-parser": "^1.20.0",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
