--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
+    "@types/express": "^4.17.14",
     "@types/node": "^14.14.14",
+    "@types/node-fetch": "^2.6.2",
     "rimraf": "^3.0.2",
     "typescript": "^4.1.3"
   }
