--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
-  "name": "line-weather-run",
-  "version": "1.0.0",
-  "description": "Testing to see if I can get Weather API data integrated into LINE API",
+  "name": "echo-bot-ts",
+  "version": "0.0.0",
+  "description": "An example LINE bot with TypeScript made to echo messages",
   "main": "./dist/index.js",
   "scripts": {
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
     "start": "node dist/index.js"
   },
-  "author": "Nicholas Dwiarto <nicholasdwiarto@yahoo.com> (https://nicholasdw.com)-for the echo tutorial portion. The Weather API tutorial was found from Roy Kibet https://www.section.io/engineering-education/create-a-weather-app-in-nodejs-using-openweathermap-api/#prerequisites",
+  "author": "Nicholas Dwiarto <nicholasdwiarto@yahoo.com> (https://nicholasdw.com)",
   "dependencies": {
     "@line/bot-sdk": "^7.3.0",
-    "body-parser": "^1.20.0",
-    "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.0.2",
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "node-fetch": "^2.6.6",
-    "request": "^2.88.2"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
+    "@types/express": "^4.17.14",
     "@types/node": "^14.14.14",
     "@types/node-fetch": "^2.6.2",
     "rimraf": "^3.0.2",
