--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Nicholas Dwiarto <nicholasdwiarto@yahoo.com> (https://nicholasdw.com)",
   "dependencies": {
     "@line/bot-sdk": "^7.3.0",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.27.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
