--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@line/bot-sdk": "^7.3.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.27.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
