--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "echo-bot-ts",
-  "version": "0.0.0",
-  "description": "An example LINE bot with TypeScript made to echo messages",
+  "version": "1.0.0",
+  "description": "An example LINE bot with TypeScript made to echo messages. I then studied a weather API tutorial and combined the two to make my own unique responses. Roy Kibet- https://www.section.io/engineering-education/create-a-weather-app-in-nodejs-using-openweathermap-api/#prerequisites",
   "main": "./dist/index.js",
   "scripts": {
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
     "start": "node dist/index.js"
   },
-  "author": "Nicholas Dwiarto <nicholasdwiarto@yahoo.com> (https://nicholasdw.com)",
+  "author": "Nicholas Dwiarto <nicholasdwiarto@yahoo.com> (https://nicholasdw.com), Roy Kibet tutorial and my own spin off this for learning purposes-Matt Crowe",
   "dependencies": {
     "@line/bot-sdk": "^7.3.0",
     "dotenv": "^16.0.3",
